App lista y sin fallos, faltan los test