@@ -29,24 +29,46 @@ import java.util.*;
 /**
  * Controlador para la pantalla de "Mi Perfil".
  * <p>
- * Muestra los datos del usuario (email y género favorito),
- * permite editar y guardar el género favorito,
- * cambiar su contraseña y eliminar la cuenta.
- * También maneja la navegación lateral.
+ * Muestra y permite editar los datos del usuario: email y género favorito,
+ * cambiar contraseña, eliminar cuenta y navegar por la aplicación.
+ * Además, carga dinámicamente la lista de géneros desde Google Books API.
  * </p>
  */
 public class ProfileController implements Initializable {
 
+    /** Logo que aparece en el menú lateral. */
     @FXML private ImageView drawerLogo;
+
+    /** Campo de texto que muestra el email del usuario. */
     @FXML private TextField emailField;
+
+    /** ComboBox para seleccionar el género literario favorito. */
     @FXML private ComboBox<String> generoComboBox;
+
+    /** Campo de texto para ingresar la nueva contraseña. */
     @FXML private PasswordField nuevaPassField;
+
+    /** Campo de texto para repetir la nueva contraseña. */
     @FXML private PasswordField repitePassField;
 
+    /** Usuario actualmente autenticado. */
     private Usuario usuario;
 
-    private static final String GOOGLE_BOOKS_API = "https://www.googleapis.com/books/v1/volumes?q=bestseller&maxResults=30&langRestrict=es";
+    /** URL para obtener géneros populares desde Google Books. */
+    private static final String GOOGLE_BOOKS_API =
+        "https://www.googleapis.com/books/v1/volumes?q=bestseller&maxResults=30&langRestrict=es";
 
+    /**
+     * Inicializa el controlador al cargar el FXML.
+     * <ol>
+     *   <li>Carga el logo.</li>
+     *   <li>Carga los datos del usuario en los campos.</li>
+     *   <li>Inicia la carga de géneros desde la API.</li>
+     * </ol>
+     *
+     * @param location  ubicación del recurso FXML (no utilizado)
+     * @param resources bundle de recursos (no utilizado)
+     */
     @Override
     public void initialize(URL location, ResourceBundle resources) {
         cargarLogo();
@@ -54,11 +76,17 @@ public class ProfileController implements Initializable {
         cargarGenerosDesdeAPI();
     }
 
+    /**
+     * Descarga y establece la imagen del logo en el ImageView.
+     * <p>
+     * Añade un User-Agent para evitar bloqueos HTTP.
+     * </p>
+     */
     private void cargarLogo() {
         try {
             URL url = new URI(
                 "https://upload.wikimedia.org/wikipedia/commons/thumb/"
-               + "c/cf/Calibre_logo_3.png/640px-Calibre_logo_3.png"
+              + "c/cf/Calibre_logo_3.png/640px-Calibre_logo_3.png"
             ).toURL();
             URLConnection conn = url.openConnection();
             conn.setRequestProperty("User-Agent", "Mozilla/5.0");
@@ -70,33 +98,48 @@ public class ProfileController implements Initializable {
         }
     }
 
+    /**
+     * Obtiene el usuario actual de sesión y rellena el campo de email.
+     * <p>
+     * También programa la selección del género favorito una vez
+     * que el ComboBox esté poblado.
+     * </p>
+     */
     private void cargarDatosUsuario() {
         usuario = SessionManager.getUsuarioActual();
         if (usuario != null) {
             emailField.setText(usuario.getEmail());
-            // Luego de cargar géneros, seleccionamos el actual:
-            Platform.runLater(() -> generoComboBox.setValue(usuario.getGeneroFavorito()));
+            // Espera a que el ComboBox se haya llenado para seleccionar valor
+            Platform.runLater(() ->
+                generoComboBox.setValue(usuario.getGeneroFavorito())
+            );
         }
     }
 
     /**
-     * Lanza un hilo para pedir las categorías a Google Books y
-     * rellenar el ComboBox.
+     * Lanza un hilo para solicitar categorías de libros a Google Books
+     * y rellenar el ComboBox de géneros.
      */
     private void cargarGenerosDesdeAPI() {
         new Thread(() -> {
             Set<String> generos = new TreeSet<>();
             try {
-                HttpURLConnection conn = (HttpURLConnection) new URL(GOOGLE_BOOKS_API).openConnection();
+                // Abrir conexión HTTP a la API de Google Books
+                URI uri = URI.create(GOOGLE_BOOKS_API);
+                HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
                 conn.setRequestMethod("GET");
-                BufferedReader rd = new BufferedReader(
-                    new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8)
-                );
-                StringBuilder sb = new StringBuilder();
-                String line;
-                while ((line = rd.readLine()) != null) sb.append(line);
-                rd.close();
 
+                // Leer respuesta JSON completa
+                StringBuilder sb = new StringBuilder();
+                try (BufferedReader rd = new BufferedReader(
+                        new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
+                    String line;
+                    while ((line = rd.readLine()) != null) {
+                        sb.append(line);
+                    }
+                }
+
+                // Parsear JSON para extraer las categorías
                 JSONObject json = new JSONObject(sb.toString());
                 JSONArray items = json.optJSONArray("items");
                 if (items != null) {
@@ -114,13 +157,14 @@ public class ProfileController implements Initializable {
                 e.printStackTrace();
             }
 
+            // Rellenar ComboBox en el hilo de UI
             Platform.runLater(() -> {
                 if (generos.isEmpty()) {
                     generoComboBox.getItems().add("General");
                 } else {
                     generoComboBox.getItems().addAll(generos);
                 }
-                // Si ya había usuario cargado, restablecer selección:
+                // Restaurar selección del usuario si existe
                 if (usuario != null) {
                     generoComboBox.setValue(usuario.getGeneroFavorito());
                 }
@@ -128,7 +172,12 @@ public class ProfileController implements Initializable {
         }).start();
     }
 
-    /** Guarda el género favorito editado por el usuario. */
+    /**
+     * Guarda el género favorito seleccionado por el usuario.
+     * <p>
+     * Valida que se haya elegido un elemento y actualiza la entidad.
+     * </p>
+     */
     @FXML
     private void handleSaveGenero() {
         String nuevo = generoComboBox.getValue();
@@ -136,15 +185,24 @@ public class ProfileController implements Initializable {
             showAlert(Alert.AlertType.WARNING, "Selecciona un género.");
             return;
         }
+        // Actualiza entidad y persiste cambios
         usuario.setGeneroFavorito(nuevo);
         UsuarioDAO.updateUsuario(usuario);
         showAlert(Alert.AlertType.INFORMATION, "Género favorito actualizado.");
     }
 
-    /** Cambia la contraseña validando longitud y coincidencia. */
+    /**
+     * Permite cambiar la contraseña del usuario.
+     * <ol>
+     *   <li>Verifica longitud mínima de 6 caracteres.</li>
+     *   <li>Comprueba que ambas contraseñas coincidan.</li>
+     *   <li>Actualiza y persiste la nueva contraseña.</li>
+     * </ol>
+     */
     @FXML
     private void handleChangePassword() {
-        String p1 = nuevaPassField.getText(), p2 = repitePassField.getText();
+        String p1 = nuevaPassField.getText();
+        String p2 = repitePassField.getText();
         if (p1.length() < 6) {
             showAlert(Alert.AlertType.WARNING, "La contraseña debe tener 6+ caracteres.");
             return;
@@ -153,6 +211,7 @@ public class ProfileController implements Initializable {
             showAlert(Alert.AlertType.WARNING, "Las contraseñas no coinciden.");
             return;
         }
+        // Persistir nuevo password
         usuario.setPassword(p1);
         UsuarioDAO.updateUsuario(usuario);
         showAlert(Alert.AlertType.INFORMATION, "Contraseña cambiada.");
@@ -160,44 +219,116 @@ public class ProfileController implements Initializable {
         repitePassField.clear();
     }
 
-    /** Elimina la cuenta tras pedir confirmación. */
+    /**
+     * Elimina la cuenta del usuario tras confirmación del diálogo.
+     * <p>
+     * Borra la entidad, limpia la sesión y redirige al login.
+     * </p>
+     */
     @FXML
     private void handleDeleteAccount() {
-        Alert c = new Alert(Alert.AlertType.CONFIRMATION,
-            "Esta acción no se puede deshacer.", ButtonType.CANCEL, ButtonType.OK);
-        c.setHeaderText("¿Eliminar cuenta?");
-        Optional<ButtonType> opt = c.showAndWait();
-        if (opt.orElse(ButtonType.CANCEL) == ButtonType.OK) {
-            dao.UsuarioDAO.deleteUsuario(usuario);
+        Alert confirm = new Alert(
+            Alert.AlertType.CONFIRMATION,
+            "Esta acción no se puede deshacer.",
+            ButtonType.CANCEL, ButtonType.OK
+        );
+        confirm.setHeaderText("¿Eliminar cuenta?");
+        Optional<ButtonType> result = confirm.showAndWait();
+        if (result.orElse(ButtonType.CANCEL) == ButtonType.OK) {
+            UsuarioDAO.deleteUsuario(usuario);
             SessionManager.clear();
             volverALogin();
         }
     }
 
-    private void showAlert(Alert.AlertType t, String m) {
-        Alert a = new Alert(t); a.setHeaderText(null); a.setContentText(m); a.showAndWait();
+    /**
+     * Muestra una alerta emergente al usuario.
+     *
+     * @param type tipo de alerta (INFO, WARNING, ERROR)
+     * @param msg  mensaje a mostrar
+     */
+    private void showAlert(Alert.AlertType type, String msg) {
+        Alert alert = new Alert(type);
+        alert.setHeaderText(null);
+        alert.setContentText(msg);
+        alert.showAndWait();
     }
 
+    /**
+     * Vuelve a la pantalla de login tras eliminar cuenta.
+     */
     private void volverALogin() {
         try {
-            AnchorPane pane = FXMLLoader.load(getClass().getResource("/views/LoginDataPane.fxml"));
-            Stage st = (Stage) drawerLogo.getScene().getWindow();
-            st.setScene(new Scene(pane)); st.setTitle("Biblioteca"); st.show();
-        } catch (Exception e) { e.printStackTrace(); }
+            AnchorPane pane = FXMLLoader.load(
+                getClass().getResource("/views/LoginDataPane.fxml")
+            );
+            Stage stage = (Stage) drawerLogo.getScene().getWindow();
+            stage.setScene(new Scene(pane));
+            stage.setTitle("Biblioteca");
+            stage.show();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
-    /* — Navegación lateral — */
-    @FXML private void handleShowBuscar()          { cambiar("/views/HomePane.fxml"); }
-    @FXML private void handleShowRecomendaciones() { cambiar("/views/Recomendations.fxml"); }
-    @FXML private void handleShowBiblioteca()      { cambiar("/views/UserLibrary.fxml"); }
-    @FXML private void handleShowPerfil()          { /* ya estás */ }
-    @FXML private void handleLogout()              { SessionManager.clear(); volverALogin(); }
+    /** Navega a la vista de búsqueda de libros. */
+    @FXML private void handleShowBuscar() {
+        cambiarPantalla("/views/HomePanePane.fxml");
+    }
 
-    private void cambiar(String r) {
+    /** Navega a la vista de recomendaciones. */
+    @FXML private void handleShowRecomendaciones() {
+        cambiarPantalla("/views/RecomendationsPane.fxml");
+    }
+
+    /** Navega a la vista de "Mi Biblioteca". */
+    @FXML private void handleShowBiblioteca() {
+        cambiarPantalla("/views/UserLibraryPane.fxml");
+    }
+
+    /** Navega a la vista de perfil de usuario. */
+    @FXML private void handleShowPerfil() {
+        cambiarPantalla("/views/ProfilePane.fxml");
+    }
+
+    /**
+     * Cierra la sesión actual y vuelve al login.
+     * <p>
+     * Carga la pantalla de login y la establece en el Stage principal.
+     * </p>
+     */
+    @FXML
+    private void handleLogout() {
         try {
-            AnchorPane p = FXMLLoader.load(getClass().getResource(r));
-            Stage st = (Stage) drawerLogo.getScene().getWindow();
-            st.getScene().setRoot(p);
-        } catch (Exception e) { e.printStackTrace(); }
+            FXMLLoader loader = new FXMLLoader(
+                getClass().getResource("/views/LoginDataPane.fxml")
+            );
+            AnchorPane loginPane = loader.load();
+            Stage stage = (Stage) drawerLogo.getScene().getWindow();
+            stage.setScene(new Scene(loginPane));
+            stage.setTitle("Biblioteca");
+            stage.show();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
+
+    /**
+     * Método helper para cambiar de pantalla.
+     *
+     * @param ruta ruta al recurso FXML destino
+     */
+    private void cambiarPantalla(String ruta) {
+        try {
+            FXMLLoader loader = new FXMLLoader(
+                getClass().getResource(ruta)
+            );
+            AnchorPane root = loader.load();
+            Stage stage = (Stage) drawerLogo.getScene().getWindow();
+            stage.getScene().setRoot(root);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
 }
